--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "hainco",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": ""
+    "dev": "nodemon src/main.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.7.15",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "prisma": "^4.3.1"
   }
 }
