--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/main.js"
   },
   "type": "module",
@@ -18,6 +17,7 @@
     "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fernet": "^0.4.0",
     "prisma": "^4.3.1"
   }
 }
