--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "dev": "nodemon src/main.js",
-    "start": "node src/main.js"
+    "start": "pm2-runtime start ecosystem.config.cjs --env production"
   },
   "type": "module",
   "keywords": [],
@@ -15,11 +15,12 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^1.35.6",
     "@prisma/client": "^4.3.1",
+    "@supabase/supabase-js": "^1.35.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "fernet": "^0.4.0",
+    "pm2": "^5.2.2",
     "prisma": "^4.3.1"
   }
 }
