--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "dev": "nodemon src/main.js",
+    "start --local": "node src/main.js",
     "start": "pm2-runtime start ecosystem.config.cjs --env production"
   },
   "type": "module",
